Fix index stack list